--- a/front/index.html
+++ b/front/index.html
@@ -12,6 +12,10 @@
       <input type="email" name="email" />
       <textarea name="message"></textarea>
     </form>
+    <!-- Add this in your index.html's <head> -->
+    <form name="feedback" netlify data-netlify="true" hidden>
+      <textarea name="feedback"></textarea>
+    </form>
   </head>
   <body>
     <div id="root"></div>
